# library

./: .gitignore  CMakeLists.txt  Doxyfile  meson.build  readme.md
CRTL/: CMakeLists.txt  abort.cpp  atexit.cpp  bsearch.cpp  collate.cpp  ctype.cpp  errno.cpp  exit.cpp  fcntl.cpp  fd2file.h  fflush.cpp  fnctl.cpp  fopen.cpp  formatter.cpp  formatter.h  getenv.cpp  gmtime_r.c  gmtime_r.cpp  heap.cpp  iswspace.cpp  itoa.cpp  llabs.cpp  locale.cpp  malloc.cpp  math.cpp  mbcs.cpp  memchr.cpp  memcmp.cpp  memcpy.cpp  memset.cpp  meson.build  mkstemp.cpp  name_service.cpp  name_service.h  new_delete.cpp  printf.cpp  pthread.cpp  qsort.cpp  raise.cpp  rand.cpp  (+36 more)
CRTL/Include/: ctype.h  fcntl.h  locale.h  pthread.h  sched.h  setjmp.h  stdio.h  stdlib.h  string.h  strings.h  time.h  wchar.h  wctype.h  xlocale.h
CRTL/Include/bits/: format.h  jmpbuf.h  null.h
CRTL/Include/initterm/: initterm.h
CRTL/Include/sys/: time.h  types.h
CRTL/Source/: CMakeLists.txt  abort.cpp  abs.cpp  atexit.cpp  bsearch.cpp  collate.cpp  ctype.cpp  errno.cpp  exit.cpp  fcntl.cpp  fflush.cpp  fopen.cpp  getenv.cpp  gmtime_r.cpp  heap.cpp  llabs.cpp  locale.cpp  math.cpp  mbcs.cpp  memchr.cpp  memcmp.cpp  memcpy.cpp  memset.cpp  mkstemp.cpp  printf.cpp  pthread.cpp  qsort.cpp  raise.cpp  rand.cpp  scanf.cpp  sched.cpp  stat.cpp  stdio.cpp  stdlib.cpp  strcasecmp.cpp  strcat.cpp  strchr.cpp  strcmp.cpp  strcpy.cpp  strcspn.cpp  (+12 more)
CRTL/Source/impl/: CMakeLists.txt  Compare.h  File.cpp  File.h  Find.h  Global.cpp  RandomGen.h  UTF8In.cpp  UTF8In.h  crt2.c  crtbegin.c  external_threading.cpp  fdio.cpp  fdio.h  locale.cpp  mbcs.cpp  memcpy.h  strutl.h
CRTL/Source/impl/win/: CMakeLists.txt  crtdefs.h  dyn_tls_init.c  initterm.cpp  main.cpp  tlsdtor.cpp  tlsdyn.cpp  tlssup.cpp
CRTL/Source/machine/: CMakeLists.txt
CRTL/Source/machine/loongarch64/: CMakeLists.txt
CRTL/Source/machine/x64/: setjmp.S
CRTL/Source/machine/x86/: setjmp.S
CRTL/Source/wctype/: CMakeLists.txt  categories.c  iswalnum.c  iswalpha.c  iswdigit.c  iswgraph.c  iswupper.c  towctrans.c  towlower.c  wctrans.c  wctype.c
CRTL/impl/: ByteInFile.cpp  ByteInFile.h  ByteOutFile.cpp  ByteOutFile.h  CMakeLists.txt  Compare.h  File.cpp  File.h  Find.h  Global.cpp  Global.h  RandomGen.cpp  RandomGen.h  UTF8In.cpp  UTF8In.h  external_threading.cpp  fdio.cpp  fdio.h  file.cpp  file.h  initterm.cpp  locale.cpp  locale.h  mbcs.cpp  mbcs.h  memcpy.h  memset.h  strcat.h  strchr.h  strcpy.h  strcpy_s.h  strlen.h  strutl.h
CRTL/impl/elf/: initterm.cpp
CRTL/impl/win/: CMakeLists.txt  crtdefs.h  initterm.cpp  main.cpp  mainCRTStartup.cpp  tlsdtor.cpp  tlsdyn.cpp  tlssup.cpp
CRTL/machine/: CMakeLists.txt
CRTL/machine/x64/: CMakeLists.txt
CRTL/machine/x86/: CMakeLists.txt  chkstk.S
CRTL/machine/x86_64/: chkstk.S
CRTL/msvc/: crtdbg.cpp  excptptr.cpp  invalid_parameter.cpp  uncaught_exceptions_msvc.cpp
CRTL/pch/: pch.h
CRTL/wctype/: iswblank.c  iswcntrl.c  iswctype.c  iswlower.c  iswprint.c  iswpunct.c  iswspace.c  iswxdigit.c  local.h  towctrans.c  towupper.c
Core/: ModuleInfo.cpp
CoreImport/: CMakeLists.txt  Debugger.cpp  POSIX.cpp  RuntimeSupport.cpp  atexit.cpp  g_binder.cpp  g_chrono.cpp  g_dec_calc.cpp  g_default_heap.cpp  g_factory.cpp  g_legacy_system.cpp  g_memory.cpp  g_module.cpp  g_object_factory.cpp  g_process.cpp  g_runtime_support.cpp  g_system.cpp  memory.cpp  meson.build  module.cpp  readme.md  system.cpp  tc_constants.cpp
HandMade/: Binder.h  Binder_s.h  Current.h  Current_s.h  HeapFactory.h  HeapFactory_s.h  Memory.h  Memory_s.h  Module.h  ModuleInit.h  ModuleInit_s.h  Module_s.h  Process.h  Process_s.h  Runnable.h  Runnable_s.h  RuntimeSupport.h  RuntimeSupport_s.h
Include/: AtomicCounter.h  HeapDirectory.h  InterlockedCounter.h  Nirvana.h  __external_threading  assert.h  errno.h  fnctl.h  limits.h  nlzntz.h  siginfo.h  signal.h  stdlib.h  strings.h  unistd.h  wchar.h
Include/CRT/: errno.h  signal.h
Include/CRTL/: __external_threading  complex.h  ctype.h  errno.h  fcntl.h  (+20 more)
Mock/: CMakeLists.txt  Debugger.cpp  Debugger.h  HostAPI.cpp  HostAPI.h  HostAllocator.h  Memory.cpp  Memory.h  MockMemory.cpp  MockRuntimeSupport.cpp  Module.cpp  Module.h  Mutex.cpp  Mutex.h  POSIX.cpp  POSIX.h  RuntimeSupport.cpp  StaticallyAllocated.h  TypeCode.cpp  constants.cpp  constants.h  export.h  g_ORB.cpp  g_dec_calc.cpp  g_factory.cpp  g_legacy_system.cpp  g_memory.cpp  g_module.cpp  g_object_factory.cpp  g_runtime_support.cpp  g_system.cpp  imports.cpp  mainCRTStartup.cpp  memory.cpp  meson.build  module.cpp  object_factory.cpp  orb.cpp  system.cpp  tc_constants.cpp  (+1 more)
Mock/Include/: MockMemory.h
Mock/Include/Mock/: Memory.h  Mutex.h  Test.h  Thread.h
Mock/Source/: CMakeLists.txt  Debugger.h  HostAllocator.h  Memory.cpp  Memory.h  Module.cpp  Module.h  POSIX.h  StaticallyAllocated.h  Thread.cpp  imports.cpp
Mock/debug-trap/: README.md
Source/: Base64.cpp  BindErrorUtl.cpp  Binder.cpp  Binder_c.cpp  ByteIn.cpp  ByteOut.cpp  CMakeLists.txt  Converter.cpp  Decimal.cpp  DirectoryIterator.cpp  Fixed.cpp  Fixed_io.cpp  FloatToBCD.cpp  FloatToPacked.cpp  Formatter.cpp  HeapDirectory.cpp  HeapFactory.cpp  HeapFactory_c.cpp  Init.cpp  Memory.cpp  MemoryHelper.cpp  Memory_c.cpp  ModuleInitImpl.h  ModuleMetadata.cpp  MurmurHash2.c  OLF_Iterator.cpp  Parser.cpp  Polynomial.cpp  ProcessFactory.cpp  ProcessMain.cpp  RandomGen.cpp  Runnable.cpp  Runnable_c.cpp  RuntimeSupport.cpp  RuntimeSupport_c.cpp  SemVer.cpp  StlUtils.cpp  UTF8.cpp  WideIn.cpp  WideInEx.cpp  (+33 more)
Source/msvc/: Library.vcxproj  Library.vcxproj.filters
Test/: CMakeLists.txt  TestLibrary.cpp  TestString.cpp  TestVector.cpp  main.cpp  meson.build
Test/msvc/: TestLibrary.vcxproj  TestLibrary.vcxproj.filters
TestC/: CMakeLists.txt  memcpy-1.c  memmove1.c  sprintf.c  sscanf.c  strcmp-1.c  tstring.c
TestCRTL/: CMakeLists.txt  CmakeLists.txt  memmove1.c  tstring.c
TestCXX/: CMakeLists.txt  Object.h  Static.h  static.cpp  static1.cpp  static2.cpp  string1.cpp  string2.cpp  vector.cpp
TestContainers/: CMakeLists.txt  CmakeLists.txt  tdefs.h
TestMath/: CMakeLists.txt
(+187 files in other folders)
