lib_src += files(
	'assert.cpp',
	'bitutils.cpp',
	'c_heap_dbg.cpp',
#	'crt_startup.cpp',
	'Decimal.cpp',
	'DirectoryIterator.cpp',
	'Domains.cpp',
	'File.cpp',
	'filesystem.cpp',
	'Fixed.cpp',
	'Formatter.cpp',
	'Legacy_Process.cpp',
	'Memory.cpp',
	'MemoryHelper.cpp',
	'native.cpp',
	'nirvana_module.cpp',
	'nirvana_process.cpp',
	'nirvana_singleton.cpp',
	'OLF_Iterator.cpp',
	'real_copy.cpp',
	'rescale.cpp',
	'stl_utils.cpp',
	'System.cpp',
	'throw_exception.cpp',
	'trace.cpp',
	'UTF8.cpp')